--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projeto Super-Trunfo MapaDev Week</title>
+    <title>Projeto Slider Pokémon MapaDev Week</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,12 +17,12 @@
   </head>
   <body>
     <header class="header">
-      <img class="pokeball" src="/src/imagens/pokebola.png" alt="pokebola" />
+      <img class="pokeball" src="src/imagens/pokebola.png" alt="pokebola" />
       <h1 class="title">MapaDev Week</h1>
     </header>
     <main class="pokemon-slider">
       <button class="btn-arrow btn-back" id="btn-back">
-        <img src="/src/imagens/seta.png" alt="seta voltar" />
+        <img src="src/imagens/seta.png" alt="seta voltar" />
       </button>
       <ul class="poke-list">
         <li class="poke-card poke-card-selected bg1">
@@ -31,15 +31,12 @@
             <p class="hp">HP 300</p>
           </div>
           <div class="pk-container">
-            <img class="img-pk" src="/src/imagens/pikachu.png" alt="Pikachu" />
+            <img class="img-pk" src="src/imagens/pikachu.png" alt="Pikachu" />
           </div>
           <div class="description">
             <h3 class="subtitle">Descrição</h3>
             <p class="text">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit,
-              mollitia iusto laborum eveniet rem excepturi odit consequatur
-              pariatur in obcaecati ullam aspernatur adipisci quia ratione iure!
-              Doloribus eius rem necessitatibus.
+              Os Pikachus são pequenos roedores de quarenta centímetros e de seis quilogramas, com um corpo redondo, pernas curtas e uma longa cauda, quando macho, a cauda tem um formato de um raio, mas se o Pikachu for fêmea sua cauda ganha um coração na ponta.
             </p>
           </div>
         </li>
@@ -51,17 +48,14 @@
           <div class="pk-container">
             <img
               class="img-pk"
-              src="/src/imagens/charizard.png"
+              src="src/imagens/charizard.png"
               alt="Charizard"
             />
           </div>
           <div class="description">
             <h3 class="subtitle">Descrição</h3>
             <p class="text">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit,
-              mollitia iusto laborum eveniet rem excepturi odit consequatur
-              pariatur in obcaecati ullam aspernatur adipisci quia ratione iure!
-              Doloribus eius rem necessitatibus.
+              Geralmente, um Charizard é competitivo. Ele adora a batalha e seu espírito competitivo também é notável, uma vez que nunca vai cuspir fogo em um inimigo mais fraco a menos que provocado ou ordenado. Quando fica muito irritado, as chamas em sua cauda se tornam branco-azuladas.
             </p>
           </div>
         </li>
@@ -71,21 +65,18 @@
             <p class="hp">HP 1200</p>
           </div>
           <div class="pk-container">
-            <img class="img-pk" src="/src/imagens/mewtwo.png" alt="Mewtwo" />
+            <img class="img-pk" src="src/imagens/mewtwo.png" alt="Mewtwo" />
           </div>
           <div class="description">
             <h3 class="subtitle">Descrição</h3>
             <p class="text">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit,
-              mollitia iusto laborum eveniet rem excepturi odit consequatur
-              pariatur in obcaecati ullam aspernatur adipisci quia ratione iure!
-              Doloribus eius rem necessitatibus.
+              Mewtwo foi criado geneticamente em um laboratório, sendo um clone do misterioso antigo Pokémon Mew. É uma criatura com uma postura humanóide, mas tem algumas características felinas.
             </p>
           </div>
         </li>
       </ul>
       <button class="btn-arrow" id="btn-forward">
-        <img src="/src/imagens/seta.png" alt="seta avançar" />
+        <img src="src/imagens/seta.png" alt="seta avançar" />
       </button>
     </main>
     <script src="src/js/index.js"></script>
